@@ -1112,4 +1112,5 @@ The following functions accept any form a path. The INI and language INI functio
 2019-10-16  Added: OSDMenuItemPassDrawing() to allow a user-controlled item drawing
             Added: TMSOSDMenu PassDrawing demo
             Added: Cursor type CT_Hide to hide the cursor
+            Added: OSDMenuButtonModifyText() to allow label replacement without graphic position change
             Modified: Release date
